--- a/workspace/index.html
+++ b/workspace/index.html
@@ -27,7 +27,7 @@
                         "accent-green": "#22C55E",
                     },
                     fontFamily: {
-                        sans: ["Inter", "sans-serif"],
+                        sans: ["Inter", "Noto Sans KR", "sans-serif"],
                         mono: ["JetBrains Mono", "monospace"],
                     },
                     boxShadow: {
